# fala

./: .gitignore  CMakeLists.txt  README.md  flake.nix  makefile  shell.nix  test.sh
etc/: fala-mode.el
examples/: array_access.fala  array_creation.fala  array_mutation.fala  array_reassignment.fala  bf.fala  collatz.fala  dyn_arr.fala  fib.fala  fib2.fala  function_call.fala  glider.fala  hello_world.fala  if_print.fala  in_out.fala  in_out.input  let.fala  max_int.fala  paren_assign.fala  pithagoras.fala  print_int.fala  print_str_int.fala  read_ints.fala  syntax_err.fala  vec_sort.fala
src/: ast.c  ast.cpp  ast.h  ast.hpp  bytecode.cpp  bytecode.hpp  compiler.c  compiler.cpp  compiler.h  compiler.hpp  env.c  env.h  env.hpp  eval.c  eval.cpp  eval.h  eval.hpp  evaluator.hpp  file.hpp  file_reader.cpp  file_reader.hpp  fixed_vector.hpp  hir.cpp  hir.hpp  hir_compiler.cpp  hir_compiler.hpp  index.hpp  lexer.c  lexer.cpp  lexer.h  lexer.hpp  lexer.l  lexer2.c  line_reader.cpp  line_reader.hpp  lir.cpp  lir.hpp  location.hpp  logger.hpp  main.c  (+27 more)
test/: bf.out  bf.rap  bf.sh  collatz.out  collatz.rap  collatz.sh  dyn_arr.c  dyn_arr.rap  dyn_arr.sh  fib.rap  fib.sh  fib2.out  fib2.rap  fib2.sh  glider.out  glider.rap  gol.rap  hello_world.rap  in_out.out  in_out.rap  in_out.sh  max_int.rap  max_int.sh  pithagoras.rap  vec_sort.c  vec_sort.rap  vec_sort.sh
